--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ nav ul li a::after{
   .about-col-1 img{
     width: 100%;
     border-radius: 15px;
+  
  
   }
   .about-col-2{
@@ -597,7 +598,7 @@ display: block;
     #header {
       width: 100%; 
        height: 50vh; 
-      background-image: url(./images/bgimg.jpg);
+      /* background-image: url(./images/bgimg.jpg); */
       background-size:contain; 
       background-position: center; 
 
@@ -943,6 +944,16 @@ nav ul li a::after{
 
   @media only screen and (min-width:310px) and (max-width:900px){
 
+
+    .section__title{
+     
+      font-size: 40px;
+    }
+    .section__subtitle{
+      font-size: 25px;
+    
+    }
+   
     .about-col-1 img {
       width: 40%;
       border-radius: 15px;
@@ -960,3 +971,86 @@ nav ul li a::after{
     width: 80%;
     margin-bottom: 40px;
   }
+
+
+
+
+  /*==================== statistics  ====================*/
+
+.statistic__row .content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem 3rem;
+ 
+  margin: 40px 0px;
+}
+
+.statistic__row .content .statistic__circle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+.circular {
+  height: 120px;
+  width: 120px;
+  position: relative;
+  margin-bottom: -10px;
+ 
+}
+
+.circular .inner {
+  position: absolute;
+  z-index: 6;
+  top: 50%;
+  left: 50%;
+  margin: -40px 0 0 -40px;
+}
+
+.circular .number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(153, 153, 153);
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+
+.circular .bar {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  -webkit-border-radius: 100%;
+  clip: rect(0px, 100px, 100px, 50px);
+  transform: rotate(250deg);
+  border-width: 9px;
+  border-style: solid;
+  color: #ff004f;
+}
+
+.round .bar {
+  clip: unset;
+}
+
+
+.section__title{
+  margin: auto;
+ 
+  text-align: center;
+font-size: 60px;
+}
+.section__subtitle{
+  margin: auto;
+
+  text-align: center;
+  display: block;
+  font-size: 40px;
+
+}
+
